--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="resources/css/styles.css">
 </head>
 <body>
+   <div id="header">
     <h1>Discover hidden places in the world around you</h1>
-      <a href="#">Download Excursion (Coming soon)</a>
-</body>
+   </div>
+   <div>
+    <a href="#">Download Excursion (Coming soon)</a>
+    <p><video src="resources/videos/excursion.mp4"></video></p>
+   </div>
+   <div>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you</p>
+   <p><img src="resources/images/camp.webp"></p>
+   </div>
+   <div>
+    <p><img src="resources/images/phone.png"></p>
+    <h2>Coming Soon for iphone and Android</h2>
+      <a href=#>Download Excursion (Coming soon)</a>
+   </div>
+   <div id="footer">
+       <p>copyright Excursion</p>
+   </div>
+    </body>
 </html>
