added type in css link

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="resources/css/styles.css">
+    <title>Excursion</title>
+    <link rel="stylesheet" type="text/css" href="resources/css/styles.css">
 </head>
 <body>
    <div id="header">
@@ -17,7 +17,7 @@
    </div>
    <div>
     <h2>Your personal travel guide</h2>
-    <p>Excursion remembers places you like, and recommends new points of interest around you</p>
+    <p id="guide">Excursion remembers places you like, and recommends new points of interest around you</p>
    <p><img src="resources/images/camp.webp"></p>
    </div>
    <div>
@@ -26,7 +26,7 @@
       <a href=#>Download Excursion (Coming soon)</a>
    </div>
    <div id="footer">
-       <p>copyright Excursion</p>
+       <p>&copy; Excursion</p>
    </div>
     </body>
 </html>
