--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
 <body>
    <div id="header">
     <h1>Discover hidden places in the world around you</h1>
+      <p><a href="#">Download Excursion (Coming soon)</a></p>
    </div>
    <div>
-    <a href="#">Download Excursion (Coming soon)</a>
-    <p><video src="resources/videos/excursion.mp4"></video></p>
+    <video autoplay loop>
+        <source src="resources/videos/excursion.mp4" type="video/mp4">
+    </video>
    </div>
    <div>
     <h2>Your personal travel guide</h2>
-    <p id="guide">Excursion remembers places you like, and recommends new points of interest around you</p>
+      <h4>Excursion remembers places you like, and recommends new points of interest around you</h4>
    <p><img src="resources/images/camp.webp"></p>
    </div>
    <div>
     <p><img src="resources/images/phone.png"></p>
     <h2>Coming Soon for iphone and Android</h2>
-      <a href=#>Download Excursion (Coming soon)</a>
+      <p><a href=#>Download Excursion (Coming soon)</a></p>
    </div>
    <div id="footer">
        <p>&copy; Excursion</p>
