--- a/index.html
+++ b/index.html
@@ -2,33 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excursion</title>
     <link rel="stylesheet" type="text/css" href="resources/css/styles.css">
 </head>
 <body>
-   <div id="header">
-    <h1>Discover hidden places in the world around you</h1>
+   <h1 class="header">Discover hidden places in the world around you</h1>
       <p><a href="#">Download Excursion (Coming soon)</a></p>
-   </div>
-   <div>
-    <video autoplay loop>
+   <video autoplay loop>
         <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
-   </div>
-   <div>
-    <h2>Your personal travel guide</h2>
+   <h2>Your personal travel guide</h2>
       <h4>Excursion remembers places you like, and recommends new points of interest around you</h4>
    <p><img src="resources/images/camp.webp"></p>
-   </div>
-   <div>
-    <p><img src="resources/images/phone.png"></p>
+   <p><img src="resources/images/phone.png"></p>
     <h2>Coming Soon for iphone and Android</h2>
       <p><a href=#>Download Excursion (Coming soon)</a></p>
-   </div>
-   <div id="footer">
-       <p>&copy; Excursion</p>
-   </div>
+   
+       <p class="footer">&copy; Excursion</p>
+   
     </body>
 </html>
