--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Excursion</title>
-    <link rel="stylesheet" type="text/css" href="resources/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
 </head>
 <body>
    <h1 class="header">Discover hidden places in the world around you</h1>
@@ -22,5 +22,5 @@
    
        <p class="footer">&copy; Excursion</p>
    
-    </body>
+</body>
 </html>
